--- a/css/styles.css
+++ b/css/styles.css
@@ -49,11 +49,11 @@ address {
 /* Шапка */
 .main-nav {
     display: flex;
-    align-items: baseline;
+    align-items: center;
 }
 .nav {
     display: flex;
-    align-items: baseline;
+    align-items: center;
 }
 .logo-accent {
     margin-right: 93px;
@@ -69,11 +69,11 @@ address {
 }
 .site-nav {
     display: flex;
-    align-items: baseline;
+    align-items: center;
 }
 .contacts {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     margin-left: auto;
 }
 .site-nav .item + .item,
@@ -85,33 +85,48 @@ address {
     padding-top: 32px;
     padding-bottom: 32px;
 
-    color: var(--secondary-color);
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
+}
+.site-nav .link {
+    color: var(--secondary-color);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.current {
+    position: relative;
+    display: flex;
+}
+.current::after {
+    content: '';  
+    position: absolute;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;  
+    background-color: #2196F3;
+} 
+.contact-icon {
+    margin-right: 10px;
+    fill: var(--primary-color);
+    transition-property: fill;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+}
+.contact.link {
+    display: flex;
+    align-items: center;
+    color: var(--primary-color);
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
 }
 .header .link:hover,
 .header .link:focus,
 .header .link.current {
     color: var(--accent-color);
-}
-.current::after {
-    content: '';
-    display: block;
-    margin-top: 28px;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;  
-    background-color: #2196F3;
-}    
-.contact.link {
-    display: flex;
-    align-items: center;
-    color: var(--primary-color);;  
-}
-.contact-icon {
-    margin-right: 10px;
-    fill: var(--primary-color);   
 }
 .contact:hover .contact-icon,
 .contact:focus .contact-icon {
@@ -302,9 +317,16 @@ address {
     height: 44px;
     padding: 12px;
     border-radius: 50%;  
+    background-color: transparent;
+    transition-property: background-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
 }
 .social-icon {
     fill: #AFB1B8;
+    transition-property: fill;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms; 
 }
 .social-link:hover,
 .social-link:focus {
@@ -328,6 +350,9 @@ address {
     align-items: center;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+    transition-property: border-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;  
 }
 .clients .item:not(:nth-child(6n)) {
     margin-right: 30px;
@@ -337,6 +362,9 @@ address {
 }
 .client-icon {
     fill: #AFB1B8;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-link:hover,
 .client-link:focus {
@@ -363,6 +391,10 @@ address {
 
     color: var(--secondary-color);
     background-color: var(--background-secondary-color);
+    box-shadow: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -382,7 +414,9 @@ address {
     flex-wrap: wrap;
 }
 .projects .item {
-    width: calc((100% - 60px) / 3);   
+    width: calc((100% - 60px) / 3); 
+    box-shadow: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projects .item:not(:nth-child(3n)) {
     margin-right: 30px;
@@ -392,6 +426,30 @@ address {
 }
 .projects .item:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.project-wrap {
+    position: relative;
+    overflow: hidden;
+}
+.project-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 63px 24px;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(101%);
+    transition: 400ms;
+}
+.projects .item:hover .project-overlay {
+    transform: translateY(0);
+}
+.project-overlay-description {
+    font-size: 18px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    line-height: 28px;
 }
 .project-description {
     padding: 20px 24px;
@@ -415,50 +473,6 @@ address {
     line-height: 1.88;
 }
 
-/* Модальное окно */
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    background-color: rgba(0, 0, 0, 0.2);
-}
-.backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-}
-.modal{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    min-width: 528px;
-    min-height: 581px;
-    border-radius: 4px;
-    
-    background-color: #FFFFFF;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);       
-}
-.button-close {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: 30px;
-    height: 30px;
-    margin-top: 8px;
-    margin-right: 8px;
-    margin-bottom: auto;
-    margin-left: auto;   
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    background-color: var(--white-color);
-}
-
 /* Подвал */
 .footer {
     padding-top: 60px;
@@ -478,6 +492,9 @@ address {
 }
 .footer .link {
     color: rgba(255, 255, 255, 0.6);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer .address-item:not(:last-child) {
     margin-bottom: 9px;
@@ -516,7 +533,10 @@ address {
     padding: 12px;
     border-radius: 50%;
     
-    background: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.1);
+    transition-property: background-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;   
 }
 .footer .social-icon {
     fill: var(--white-color);
@@ -524,4 +544,58 @@ address {
 .footer .social-link:hover,
 .footer .social-link:focus {
     background-color: var(--accent-color)
+}
+
+/* Модальное окно */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0, 0, 0, 0.2);
+    
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 400ms cubic-bezier(0.4, 0, 0.2, 1), visibility 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(1.1);
+}
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    
+    min-width: 528px;
+    min-height: 581px;
+    border-radius: 4px;
+
+    background-color: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-close {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 30px;
+    height: 30px;
+    margin-top: 8px;
+    margin-right: 8px;
+    margin-bottom: auto;
+    margin-left: auto;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background-color: var(--white-color);
 }
