--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ address {
     left: 0;
     bottom: 0;
   
+    font-size: 14px;
     font-weight: 700;
     text-transform: uppercase;
     color: #FFFFFF;
@@ -284,12 +285,11 @@ address {
 }
 .team {
     font-size: 16px;
-    line-height: 1.19;
-    
-    background-color: var(--white-color);
+    line-height: 1.19;   
 }
 .team .item {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: var(--white-color);
 }
 .team .title {  
     margin-top: 0;
